[gd_scene load_steps=5 format=3 uid="uid://bovkjdl1hucls"]

[ext_resource type="Texture2D" uid="uid://bx8xuq74taxlq" path="res://src/images/fac_img.png" id="1_mob6k"]
[ext_resource type="Script" uid="uid://8mesn4488jr" path="res://src/scenes/main_menu.gd" id="1_rkeyg"]
[ext_resource type="Texture2D" uid="uid://v7jp10vttvaa" path="res://icon.svg" id="2_rkeyg"]
[ext_resource type="Texture2D" uid="uid://di5lpn0g0aodg" path="res://src/images/scene1_thumbnail.png" id="3_iaawh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rkeyg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.53747624, 0.87913084, 1, 1)

[node name="Title" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.18900001
anchor_top = 0.031000001
anchor_right = 0.735
anchor_bottom = 0.32700002

[node name="TextureRect" type="TextureRect" parent="Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.684
anchor_top = -0.036953624
anchor_right = 1.450066
anchor_bottom = 0.80200005
offset_left = 0.04147339
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mob6k")
expand_mode = 2
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.65500003
anchor_bottom = 0.72400004
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0.0057873726, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6745098)
theme_override_font_sizes/font_size = 46
text = "PLC Sim 6000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.65500003
anchor_bottom = 0.72400004
offset_left = -112.72801
offset_top = 28.911999
offset_right = -112.728
offset_bottom = 28.912003
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6745098)
theme_override_font_sizes/font_size = 12
text = "from temu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.10700001
anchor_top = 0.32700002
anchor_right = 0.813
anchor_bottom = 0.92300004
offset_top = -1.5258789e-05

[node name="Scene1" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Scene1"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
texture = ExtResource("3_iaawh")
expand_mode = 1

[node name="Label" type="Label" parent="HBoxContainer/Scene1"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Queue of items"

[node name="PlayBtn" type="Button" parent="HBoxContainer/Scene1"]
layout_mode = 2
text = "Start"

[node name="VideoBtn" type="Button" parent="HBoxContainer/Scene1"]
layout_mode = 2
text = "Video"

[node name="ExportBtn" type="Button" parent="HBoxContainer/Scene1"]
layout_mode = 2
text = "Export I/O table"

[node name="Scene2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Scene2"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
texture = ExtResource("2_rkeyg")

[node name="Label" type="Label" parent="HBoxContainer/Scene2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Queue of items"

[node name="PlayBtn" type="Button" parent="HBoxContainer/Scene2"]
layout_mode = 2
text = "Start"

[node name="VideoBtn" type="Button" parent="HBoxContainer/Scene2"]
layout_mode = 2
text = "Video"

[node name="ExportBtn" type="Button" parent="HBoxContainer/Scene2"]
layout_mode = 2
text = "Export I/O table"

[node name="Scene3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Scene3"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
texture = ExtResource("2_rkeyg")

[node name="Label" type="Label" parent="HBoxContainer/Scene3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Queue of items"

[node name="PlayBtn" type="Button" parent="HBoxContainer/Scene3"]
layout_mode = 2
text = "Start"

[node name="VideoBtn" type="Button" parent="HBoxContainer/Scene3"]
layout_mode = 2
text = "Video"

[node name="ExportBtn" type="Button" parent="HBoxContainer/Scene3"]
layout_mode = 2
text = "Export I/O table"

[connection signal="pressed" from="HBoxContainer/Scene1/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/Scene1/VideoBtn" to="." method="_on_video_btn_pressed"]
